# ebpf-knowledge-base

./: .gitignore  .gitmodules  Dockerfile  README.md  entry.py  extract.py  requirements.txt  train.py  web.py  worker.py  worker_langchain.py
.github/workflows/: auto-release.yml
templates/: index.html
web-server/: .gitignore  Cargo.toml
web-server/src/: index.html  main.rs  route.rs  state.rs  util.rs  worker.rs
